welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	var s: Int = 0;
	if(a < b){
		var c: Int = a;
		var d: Int = b;
	}
	else{
		var c: Int = b;
		var d: Int = a;
	}
	
	if(Math.abs(c - 10) == Math.abs(d - 10)){
		s = 0;
	}
	else if(Math.abs(c - 10) < Math.abs(d - 10)){
		s = c;
	}
	else if(Math.abs(c - 10) > Math.abs(d - 10)){
		s = d;
	}
	return s;
}
